welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:3: error: not enough arguments for method ligneMotif: (nbMotif: Int)Unit.
Unspecified value parameter nbMotif.
    ligneMotif()
              ^